objects/LLC_BI__Budget_Transaction_Request__c.object
<CustomObject>
    <description>This object facilitates budget transaction requests. For example, draw funding requests against budget line items.</description>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LLC_BI__Amount_Budgeted__c</fullName>
        <description>Formula field that reads in the budget line item amount budgeted field.</description>
        <formula>LLC_BI__Budget_Line_Item__r.LLC_BI__Amount_Budgeted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Budgeted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Amount_Funded__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>The amount approved funded for this budget transaction request.</description>
        <label>Amount Funded</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Amount_Requested__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>The amount requested for this budget transaction request.</description>
        <label>Amount Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Budget_Line_Item_Description__c</fullName>
        <description>The budget line item description.</description>
        <formula>LLC_BI__Budget_Line_Item__r.LLC_BI__Description__c</formula>
        <label>Budget Line Item Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Budget_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A link to the budget line item associated with this budget transaction request.</description>
        <label>Budget Line Item</label>
        <referenceTo>LLC_BI__Budget_Line_Item__c</referenceTo>
        <relationshipLabel>Budget Transaction Requests</relationshipLabel>
        <relationshipName>Budget_Transaction_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Percent_Funded__c</fullName>
        <description>Percentage of the requested amount that was approved funded.</description>
        <formula>LLC_BI__Amount_Funded__c  /  LLC_BI__Amount_Requested__c</formula>
        <label>Percent Funded</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Percent_Requested__c</fullName>
        <description>Percentage of the budgeted amount that is being requested.</description>
        <formula>LLC_BI__Amount_Requested__c  /  LLC_BI__Amount_Budgeted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Requested</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Transaction_Request__c</fullName>
        <description>A link to the parent transaction request record.</description>
        <label>Transaction Request</label>
        <referenceTo>LLC_BI__Transaction_Request__c</referenceTo>
        <relationshipLabel>Budget Transaction Requests</relationshipLabel>
        <relationshipName>Budget_Transaction_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Budget Transaction Request</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <columns>LLC_BI__Amount_Budgeted__c</columns>
        <columns>LLC_BI__Amount_Funded__c</columns>
        <columns>LLC_BI__Amount_Requested__c</columns>
        <columns>LLC_BI__Budget_Line_Item__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>BGT-TXNR-{000000000}</displayFormat>
        <label>Budget Transaction Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget Transaction Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>